app/css/main.css
html {
    height: 100%;
}

html, body {
    min-height: 100%;
    max-width: 100%;
    position: relative;
    overflow-x: hidden;
}

body {
	padding-top: 85px;
    padding-bottom: 25px;
    background: url("../img/OW-bg-pattern.svg") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.panel {
    position: relative;
    border: none;
}

hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

hr.tight {
    margin-top: 0px;
}

.translucent {
    background-color: rgba(255, 255, 255, .5);
}

.spinner {
    position: relative;
    border: 16px solid rgba(207, 207, 207, 0.65); /* Light grey */
    border-top: 16px solid rgba(255, 255, 255, 0.62); /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    z-index: 50;
    animation: spin 1.2s linear infinite;
}

#form-username {
    margin-top: 3%;
    text-align: center;
}

.error {
    margin-top: 15%;
}

.img-tall {
    display: block;
    max-width: 100%;
    height: auto;
}



 /* ----- ANIMATIONS ----- */

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}




/*================
  MEDIA QUERIES
 ===============*/

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    
    hr {
        margin-top: 20px;
        margin-bottom: 20px;
    }

    .img-tall {
        max-height: 600px;
        width: auto;
        margin-left: auto;
        margin-right: auto;
    }

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

